# bubble-popper

./: .env.example  .gitignore  DATA_MODEL.md  IMPROVEMENTS.md  README.md  claude.md  dashboard.py  edgar_ingest.py  fred_ingest.py  main.py  model.py  pyproject.toml  regime.py  schema.sql  shiller_ingest.py  verify.sql
.github/workflows/: fred_ingest.yml  ingest.yml
