[project]
name = "bubble-popper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "xlrd>=2.0.2",
    "yfinance>=1.4.1",
]
